--- a/.gitattributes
+++ b/.gitattributes
@@ -14,4 +14,4 @@
 *.pb filter=lfs diff=lfs merge=lfs -text
 *.pt filter=lfs diff=lfs merge=lfs -text
 *.pth filter=lfs diff=lfs merge=lfs -text
-.idea
+.idea/
